-first version of zip packer / unpacker (yet untested)

--- a/src/sdsslib/sdsslib.vcproj
+++ b/src/sdsslib/sdsslib.vcproj
@@ -400,6 +400,14 @@
 		<Filter
 			Name="FileArchive"
 			>
+			<File
+				RelativePath=".\FileArchive.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\FileArchive.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="3rdParty"
