--- a/trunk/src/search/search.vcproj
+++ b/trunk/src/search/search.vcproj
@@ -163,6 +163,7 @@
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(IntDir)/$(ProjectName).pdb"
 				SubSystem="1"
+				LinkTimeCodeGeneration="1"
 				ProfileGuidedDatabase=""
 				TargetMachine="17"
 			/>
@@ -340,6 +341,7 @@
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				LinkTimeCodeGeneration="1"
 				ProfileGuidedDatabase=""
 				TargetMachine="17"
 			/>
