-added simple CSV exporter -adapted Spectra::saveToCSV()

--- a/src/sdsslib/sdsslib.vcproj
+++ b/src/sdsslib/sdsslib.vcproj
@@ -542,6 +542,14 @@
 			</Filter>
 		</Filter>
 		<File
+			RelativePath=".\CSVExport.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\CSVExport.h"
+			>
+		</File>
+		<File
 			RelativePath=".\debug.cpp"
 			>
 		</File>
